--- a/Assets/HotfixScripts/Model/Hotfix.Model.asmdef
+++ b/Assets/HotfixScripts/Model/Hotfix.Model.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Hotfix.LogicView",
+    "name": "Hotfix.Model",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
