--- a/Assets/HotfixScripts/ModelView/Hotfix.ModelView.asmdef
+++ b/Assets/HotfixScripts/ModelView/Hotfix.ModelView.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Hotfix.LogicView",
+    "name": "Hotfix.ModelView",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
