--- a/Assets/HotfixScripts/Logic/Hotfix.Logic.asmdef
+++ b/Assets/HotfixScripts/Logic/Hotfix.Logic.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "Hotfix.Logic",
     "rootNamespace": "",
-    "references": [
-        "GUID:2144f06db9c2249d18ff9fecc1189720"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
