--- a/Assets/HotfixScripts/Logic/Hotfix.Logic.asmdef
+++ b/Assets/HotfixScripts/Logic/Hotfix.Logic.asmdef
@@ -1,7 +1,11 @@
 {
     "name": "Hotfix.Logic",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:2144f06db9c2249d18ff9fecc1189720",
+        "GUID:8d7e6379895bf4574a5ca6cb3864ff90",
+        "GUID:363c5eb08ff8e6a439b85e37b8c20d96"
+    ],
     "includePlatforms": [
         "Editor"
     ],
